@@ -1,5 +1,9 @@
 2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gnat.dg/bit_packed_array3.adb: New test.
+
+2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gnat.dg/warn4.adb: New test.
 
 2008-05-17  Paul Thomas  <pault@gcc.gnu.org>
