@@ -1,3 +1,8 @@
+2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* fold-const.c (fold_unary) <CASE_CONVERT>: Fold the cast into
+	a BIT_AND_EXPR only for an INTEGER_TYPE.
+
 2008-05-15  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/36245
